Prevent sorting icons to wrap to the next line

--- a/coin-selfservice-standalone/src/stylesheets/utilities/table.sass
+++ b/coin-selfservice-standalone/src/stylesheets/utilities/table.sass
@@ -23,6 +23,7 @@
   th
     @extend %h3
     padding: 15px 20px
+    white-space: nowrap
 
     // Sorting
     a
